# ESD

./: .gitignore  Dockerfile  Power_BI _sentimentos.pbix  pyproject.toml
docker/: docker-compose.yaml
docker/dump/: README.md  esd_wine_carregada.dump  esd_wine_dw_carregada.dump
docker/psql/: init.sql
src/: .env  README.md  main.py
src/migrations/: env.py
src/migrations/versions/: 33b2597537e5_initial.py  48f6c57b8fae_initial.py
src/models/gold/: __init__.py  dim_date.py  dim_metodo_pagamento.py  dim_produto.py  dim_produto_categoria.py  dim_regiao.py  dim_source.py  dim_tipo_sentimento.py  dim_utilizador.py  ft_sentimento.py  ft_vendas.py
src/models/silver/: __init__.py  metodo_pagamento.py  produto.py  sentimento.py  utilizador.py  venda.py  website_feedback.py
src/pipelines/gold/: load_dim_date.py  load_dim_metodo_pagamento.py  load_dim_produto.py  load_dim_produto_categoria.py  load_dim_regiao.py  (+5 more)
src/utils/: __init__.py  config.py  database.py
trabalho/: .$diagrama v2 _avancos.drawio.bkp  TODO.txt  diagrama v0.drawio  diagrama v1 _avancos.drawio  diagrama v2 _avancos.drawio  power BI v0.pbix  power BI.pbix  relatório ESD _Grupo_5.docx  script_base_dados.txt  script_base_dados_dw.txt
trabalho/codigo/: 0_correr_so_primeira_vez.py  1_ingestao_mongodb.py  2_formulario.html  2_servidor.py  3_extracao_csv_vendas_para_mongodb.py  3_extracao_mongodb.py  4_transformacao_LimpaETraduz.py  5_transformacao_aplica_TAS.py  6_exportar_sentimentos_para_CSV.py  7_segmentacao_utilizador.py  _ requirements.txt  _delete_mongodb.py  _setup_database.py  database.py
(+35 files in other folders)
