[project]
name = "esd-wine"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "protobuf (>=6.33.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"